TBD - 0.9.1
- Working on Satellite support.

January-2015 - 0.9.0.3
- Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
- Bugfix: QSL Sent/Received status in the search box were switched.
- Bugfix: CTY.CSV was not updated if the file was already existing.
- Bugfix: Entity DB was not updated when CTY.CSV was updated.
- Bugfix: Search results showed the default Station Callsign if non was in the QSO. This lead to errors if QRZ was not the default.
- KLog recognizes now .ADIF files (instead of only .ADI).
- KLog shows now the WAZ status.
- Added a very basic support of DX Marathon (http://www.dxmarathon.com/).
- DXCluster filters are now working.
- The user can manually assign the DXCC entity for a DX.
- Improved the function to update the DB from one release to the following.
- DB file is compressed everytime KLog finishes.
- It is possible to find QSL pending to receive.
- It is possible to modify entities data in the World Editor in preferences.
- It is possible to choose in preferences whether to keep my Data Tab from one QSO to the next or not.
- GUI: A tooltip is shown in the search results showing the DXCC name / CQ zone.
- GUI: Added a button to rescore awards.
- GUI: Added a button to update the search Box without modifying the text.
- GUI: Updates Bearing/distance/... when changing Locator.
- GUI: When the QRZ lineedit is blank or the clear button is clicked, entity info is deleted (beam, distance, ...).
- GUI: The IOTA continent is updated when the QRZ is modified.
- GUI: DXCluster input is disabled when not connected.
- GUI: Corrected the behaviour of the status bar.
- GUI: Added primary & secondary subdivisions in the Others Tab.
- Some other minor fixes.


November-2014 - 0.9.0.2
- Bugfix: Right-click on search result sometimes caused KLog to crash.

November-2014 - 0.9.0.1
- Bugfix: Selected DX-Cluster servers were not used to connect. (TNX DL6FBS)
